--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,20 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
+  font-family: Georgia, serif;
+  background-color: #fff;
+  color: #2f2d13;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+header {
+  display: block;
+  text-align: center;
+  background-color: #ffe500;
+}
+
+h1 {
 }
