--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,92 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
 html {
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust; 100%;
   box-sizing: border-box;
-  line-height: 1.5;
-  font-family: Georgia, serif;
-  background-color: #fff;
-  color: #2f2d13;
+  font: normal 100%/1.3 sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+nav a {
+  display: inline-block;
+  text-decoration: none;
+  background-color: #DDDDDD;
+  border-radius: 4px;
+  padding: .2em .5em .3em;
+  font-weight: normal;
+  margin: 1em
+}
+
 header {
   display: block;
   text-align: center;
-  background-color: #ffe500;
+  background-color: #ADADAD;
 }
 
 h1 {
+  font-family: "Sigmar One", cursive;
+  font-size: 3rem;
+  padding: 0;
+  margin: 0;
+  text-align: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #DDDDDD;
+}
+
+nav ul {
+  text-align: center;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+nav li {
+  list-style-type: none;
+}
+
+nav a {
+  text-decoration: none;
+  font-size: 1.25em;
+  color: black;
+  border: solid 1px black;
+  padding: 1em 2em;
+}
+
+h1 {
+  font-family: 'Berkshire Swash', cursive;
+  text-align: center;
+  padding: 2em;
+  font-size: 4em;
+  display: inline-block;
+  max-width: 100%;
+}
+
+footer {
+  display: block;
+  text-align: center;
+  background-color: #ADADAD;
+  padding: 1em;
+}
+
+main {
+  text-align: center;
+  padding: 0;
+  margin: 1em;
 }
