--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ h1 {
   padding: 0;
   margin: 0;
   text-align: inherit;
+  display: block;
 }
 
 body {
@@ -63,18 +64,10 @@ nav li {
 
 nav a {
   text-decoration: none;
-  font-size: 1.25em;
+  font-size: 1em;
   color: black;
   border: solid 1px black;
-  padding: 1em 2em;
-}
-
-h1 {
-  font-family: 'Berkshire Swash', cursive;
-  text-align: center;
-  padding: 2em;
-  font-size: 4em;
-  display: inline-block;
+  padding: .75em 1.5em;
   max-width: 100%;
 }
 
@@ -89,4 +82,53 @@ main {
   text-align: center;
   padding: 0;
   margin: 1em;
+}
+
+.pic {
+  width: 200%;
+  position: absolute;
+}
+
+.coco {
+  display: flex;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+}
+
+.coco h1 {
+  font-family: 'Berkshire Swash', cursive;
+  text-align: center;
+  padding: 2em;
+  font-size: 4em;
+  display: inline-block;
+  max-width: 100%;
+  position: relative;
+}
+
+figure {
+  margin: 0;
+  padding: 1.5em;
+  width: 400px;
+  height: 400px;
+  border-radius: 10px;
+  position: relative;
+}
+
+figcaption  {
+  position: absolute;
+  bottom: 10px;
+  left: 2.5em;
+  right: 2.5em;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 7px;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+figure {
+  top: 20px;
+  left: 220px;
+  position: center;
 }
