--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  text-size-adjust; 100%;
+  text-size-adjust: 100%;
   box-sizing: border-box;
   font: normal 100%/1.3 sans-serif;
   margin: 0;
@@ -24,24 +24,13 @@ nav a {
   text-decoration: none;
   background-color: #DDDDDD;
   border-radius: 4px;
-  padding: .2em .5em .3em;
   font-weight: normal;
-  margin: 1em
+  margin: .4em;
 }
 
 header {
   display: block;
-  text-align: center;
   background-color: #ADADAD;
-}
-
-h1 {
-  font-family: "Sigmar One", cursive;
-  font-size: 3rem;
-  padding: 0;
-  margin: 0;
-  text-align: inherit;
-  display: block;
 }
 
 body {
@@ -54,8 +43,9 @@ nav ul {
   text-align: center;
   padding: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
+  margin: 0;
 }
 
 nav li {
@@ -66,8 +56,7 @@ nav a {
   text-decoration: none;
   font-size: 1em;
   color: black;
-  border: solid 1px black;
-  padding: .75em 1.5em;
+  padding: .75em 7.5em;
   max-width: 100%;
 }
 
@@ -84,51 +73,196 @@ main {
   margin: 1em;
 }
 
-.pic {
-  width: 200%;
-  position: absolute;
-}
-
-.coco {
-  display: flex;
+figure img {
   width: 100%;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-}
-
-.coco h1 {
-  font-family: 'Berkshire Swash', cursive;
-  text-align: center;
-  padding: 2em;
-  font-size: 4em;
-  display: inline-block;
-  max-width: 100%;
-  position: relative;
+  margin: auto;
 }
 
 figure {
   margin: 0;
-  padding: 1.5em;
-  width: 400px;
-  height: 400px;
   border-radius: 10px;
   position: relative;
 }
 
-figcaption  {
+figcaption {
+  font-family: 'Berkshire Swash', cursive;
   position: absolute;
-  bottom: 10px;
-  left: 2.5em;
-  right: 2.5em;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 7px;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 3rem;
+  padding: 0 4em;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-figure {
-  top: 20px;
-  left: 220px;
-  position: center;
+div .prod {
+
+}
+
+div .spec {
+  margin-left: .5em;
+  margin-right: .5em;
+}
+
+div h3 {
+  margin-left: .5em;
+  margin-right: .5em;
+}
+
+div p {
+  margin-left: .5em;
+  margin-right: .5em;
+}
+
+.specials img {
+  width: 100%;
+}
+
+ nav a:hover {
+   background-color: white;
+ }
+
+@media only screen and (min-width: 25em) {
+
+  html {
+    font-size: 120%;
+    line-height: normal;
+  }
+
+  .circ img {
+    width: 150px;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: .5em;
+  }
+
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  nav ul {
+    flex-direction: row;
+  }
+
+  nav a {
+    padding: .5em 2.5em;
+  }
+
+  .circ img {
+    width: 150px;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: .5em;
+  }
+
+  .specials {
+    margin-bottom: 2em;
+  }
+
+  .special .gour {
+    margin-bottom: 2em;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  .coco figcaption {
+    padding: 0 5em;
+  }
+
+  nav a {
+    padding: .5em 4.2em;
+  }
+
+  .circ img {
+    width: 280px;
+  }
+
+  .specials {
+    display: flex;
+  }
+
+  .special .gour {
+    width: 50%;
+  }
+
+  .special .pepper {
+    width: 50%;
+  }
+
+  .special .spec {
+    text-align: center;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
+  nav a {
+    padding: .5em 8em;
+  }
+
+  .coco {
+    width: 70%;
+  }
+
+  .flex {
+    display: flex;
+  }
+
+  .circ {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5em;
+  }
+
+  .circ img {
+    width: 180px;
+    justify-content: space-around;
+  }
+
+  .specials {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .gour img {
+    width: 40%;
+  }
+
+  .specials .gour {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .pepper img {
+    width: 40%;
+  }
+
+  .specials .pepper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-left: .5em;
+  }
+
 }
